# google-ads-data-importer

./: .dockerignore  .gitignore  AWS_OIDC_SETUP.md  Dockerfile  LICENSE  README.md  TEMPLATE_GUIDE.md  _run_terraform_create.sh  _run_terraform_destroy.sh  config.global  config.prod  config.staging  deploy.sh  pyproject.toml
.github/workflows/: github_flow.yml  github_flow.yml.disabled  nrdtech_legacy.yml.disabled
app/: config.py  lambda_handler.py  logger_config.py
app/services/: __init__.py  base_importer.py  database.py  intaker_importer.py
examples/: README.md  __init__.py  example_api_importer.py  example_csv_importer.py
terraform/bootstrap/: main.tf
terraform/main/: cloudwatch_alarm.tf  ecr.tf  lambda.tf  lambda_eventbridge_schedule.tf  main.tf  variables.tf
tests/: conftest.py
tests/unit/app/: test_sanity.py
